auth enquiry and quation model